# linux_library_nx_config

./: Makefile.am  Makefile_backup  NX_CConfig.h  configure.ac  project.config
